--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+# Arquivos sensíveis (tokens, senhas, chaves)
 localSecrets.json
+.env
+.env.local
+
+# Dependências
+node_modules/
+
+# Sistema operacional
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
